--- a/LAB4/LAB4.vcxproj
+++ b/LAB4/LAB4.vcxproj
@@ -19,19 +19,25 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Header Files\ClosedMethodsOfTheClass\4.2.h" />
+    <ClInclude Include="Header Files\ClosedMethodsOfTheClass\PointClassFix2.h" />
+    <ClInclude Include="Header Files\ClosedMethodsOfTheClass\RingFix.h" />
     <ClInclude Include="Header Files\DependentFields\4.1.h" />
     <ClInclude Include="Header Files\DependentFields\AlbumClassFix.h" />
     <ClInclude Include="Header Files\DependentFields\BandClassFix.h" />
     <ClInclude Include="Header Files\DependentFields\GenreEnum.h" />
-    <ClInclude Include="Header Files\DependentFields\PointClassFix.h" />
+    <ClInclude Include="Header Files\DependentFields\PointClassFix1.h" />
     <ClInclude Include="Header Files\DependentFields\Ring.h" />
     <ClInclude Include="Header Files\DependentFields\SongClassFix.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Resource Files\ClosedMethodsOfTheClass\4.2.cpp" />
+    <ClCompile Include="Resource Files\ClosedMethodsOfTheClass\PointClassFix2.cpp" />
+    <ClCompile Include="Resource Files\ClosedMethodsOfTheClass\RingFix.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\4.1.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\AlbumClassFix.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\BandClassFix.cpp" />
-    <ClCompile Include="Resource Files\Dependent Fields\PointClassFix.cpp" />
+    <ClCompile Include="Resource Files\Dependent Fields\PointClassFix1.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\Ring.cpp" />
     <ClCompile Include="Resource Files\Main.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\SongClassFix.cpp" />
