--- a/LAB4/LAB4.vcxproj
+++ b/LAB4/LAB4.vcxproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <ClInclude Include="Header Files\ClosedMethodsOfTheClass\4.2.h" />
     <ClInclude Include="Header Files\ClosedMethodsOfTheClass\PointClassFix2.h" />
-    <ClInclude Include="Header Files\ClosedMethodsOfTheClass\RingFix.h" />
+    <ClInclude Include="Header Files\ClosedMethodsOfTheClass\RingFix1.h" />
     <ClInclude Include="Header Files\DependentFields\4.1.h" />
     <ClInclude Include="Header Files\DependentFields\AlbumClassFix.h" />
     <ClInclude Include="Header Files\DependentFields\BandClassFix.h" />
@@ -30,11 +30,13 @@
     <ClInclude Include="Header Files\DependentFields\Ring.h" />
     <ClInclude Include="Header Files\DependentFields\SongClassFix.h" />
     <ClInclude Include="Header Files\ReadOnlyFields\PointClassFix3.h" />
+    <ClInclude Include="Header Files\StaticFieldsAndMethodsOfTheClass\4.4.h" />
+    <ClInclude Include="Header Files\StaticFieldsAndMethodsOfTheClass\RingFix2.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Resource Files\ClosedMethodsOfTheClass\4.2.cpp" />
     <ClCompile Include="Resource Files\ClosedMethodsOfTheClass\PointClassFix2.cpp" />
-    <ClCompile Include="Resource Files\ClosedMethodsOfTheClass\RingFix.cpp" />
+    <ClCompile Include="Resource Files\ClosedMethodsOfTheClass\RingFix1.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\4.1.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\AlbumClassFix.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\BandClassFix.cpp" />
@@ -43,6 +45,8 @@
     <ClCompile Include="Resource Files\Main.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\SongClassFix.cpp" />
     <ClCompile Include="Resource Files\ReadOnlyFields\PointClassFix3.cpp" />
+    <ClCompile Include="Resource Files\StaticFieldsAndMethodsOfTheClass\4.4.cpp" />
+    <ClCompile Include="Resource Files\StaticFieldsAndMethodsOfTheClass\RingFix2.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
