--- a/LAB4/LAB4.vcxproj
+++ b/LAB4/LAB4.vcxproj
@@ -30,6 +30,10 @@
     <ClInclude Include="Header Files\DependentFields\Ring.h" />
     <ClInclude Include="Header Files\DependentFields\SongClassFix.h" />
     <ClInclude Include="Header Files\ReadOnlyFields\PointClassFix3.h" />
+    <ClInclude Include="Header Files\ServiceClasses\4.5.h" />
+    <ClInclude Include="Header Files\ServiceClasses\DoubleValidator.h" />
+    <ClInclude Include="Header Files\ServiceClasses\Rectangle.h" />
+    <ClInclude Include="Header Files\ServiceClasses\RingFix3.h" />
     <ClInclude Include="Header Files\StaticFieldsAndMethodsOfTheClass\4.4.h" />
     <ClInclude Include="Header Files\StaticFieldsAndMethodsOfTheClass\RingFix2.h" />
   </ItemGroup>
@@ -45,6 +49,10 @@
     <ClCompile Include="Resource Files\Main.cpp" />
     <ClCompile Include="Resource Files\Dependent Fields\SongClassFix.cpp" />
     <ClCompile Include="Resource Files\ReadOnlyFields\PointClassFix3.cpp" />
+    <ClCompile Include="Resource Files\ServiceClasses\4.5.cpp" />
+    <ClCompile Include="Resource Files\ServiceClasses\DoubleValidator.cpp" />
+    <ClCompile Include="Resource Files\ServiceClasses\Rectangle.cpp" />
+    <ClCompile Include="Resource Files\ServiceClasses\RingFix3.cpp" />
     <ClCompile Include="Resource Files\StaticFieldsAndMethodsOfTheClass\4.4.cpp" />
     <ClCompile Include="Resource Files\StaticFieldsAndMethodsOfTheClass\RingFix2.cpp" />
   </ItemGroup>
