--- a/LAB4/LAB4.vcxproj.filters
+++ b/LAB4/LAB4.vcxproj.filters
@@ -60,6 +60,18 @@
     <ClInclude Include="Header Files\StaticFieldsAndMethodsOfTheClass\4.4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Header Files\ServiceClasses\DoubleValidator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header Files\ServiceClasses\Rectangle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header Files\ServiceClasses\RingFix3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header Files\ServiceClasses\4.5.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Resource Files\Dependent Fields\4.1.cpp">
@@ -99,6 +111,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Resource Files\StaticFieldsAndMethodsOfTheClass\4.4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Resource Files\ServiceClasses\DoubleValidator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Resource Files\ServiceClasses\Rectangle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Resource Files\ServiceClasses\RingFix3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Resource Files\ServiceClasses\4.5.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
