--- a/LAB4/LAB4.vcxproj
+++ b/LAB4/LAB4.vcxproj
@@ -33,6 +33,7 @@
     <ClInclude Include="Header Files\ServiceClasses\4.5.h" />
     <ClInclude Include="Header Files\ServiceClasses\CollisionManager.h" />
     <ClInclude Include="Header Files\ServiceClasses\DoubleValidator.h" />
+    <ClInclude Include="Header Files\ServiceClasses\GeometricProgram.h" />
     <ClInclude Include="Header Files\ServiceClasses\Rectangle.h" />
     <ClInclude Include="Header Files\ServiceClasses\RingFix3.h" />
     <ClInclude Include="Header Files\StaticFieldsAndMethodsOfTheClass\4.4.h" />
@@ -53,6 +54,7 @@
     <ClCompile Include="Resource Files\ServiceClasses\4.5.cpp" />
     <ClCompile Include="Resource Files\ServiceClasses\CollisionManager.cpp" />
     <ClCompile Include="Resource Files\ServiceClasses\DoubleValidator.cpp" />
+    <ClCompile Include="Resource Files\ServiceClasses\GeometricProgram.cpp" />
     <ClCompile Include="Resource Files\ServiceClasses\Rectangle.cpp" />
     <ClCompile Include="Resource Files\ServiceClasses\RingFix3.cpp" />
     <ClCompile Include="Resource Files\StaticFieldsAndMethodsOfTheClass\4.4.cpp" />
