--- a/LAB5/LAB5.vcxproj.filters
+++ b/LAB5/LAB5.vcxproj.filters
@@ -27,6 +27,18 @@
     <ClInclude Include="Header Files\Inheritance\DemoInheritence.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Header Files\RefactoringBaseClass\Post.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header Files\RefactoringBaseClass\User.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header Files\RefactoringBaseClass\PaidUser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header Files\RefactoringBaseClass\Login.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Resource Files\Inheritance\Person.cpp">
@@ -42,6 +54,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Resource Files\Inheritance\DemoInheritence.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Resource Files\RefactoringBaseClass\Post.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Resource Files\RefactoringBaseClass\User.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Resource Files\RefactoringBaseClass\PaidUser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Resource Files\RefactoringBaseClass\Login.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
