--- a/LAB5/LAB5.vcxproj
+++ b/LAB5/LAB5.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Header Files\Inheritance\Person.h" />
     <ClInclude Include="Header Files\Inheritance\Student.h" />
     <ClInclude Include="Header Files\Inheritance\Teacher.h" />
+    <ClInclude Include="Header Files\Polymorphism\Product.h" />
     <ClInclude Include="Header Files\RefactoringBaseClass\Login.h" />
     <ClInclude Include="Header Files\RefactoringBaseClass\PaidUser.h" />
     <ClInclude Include="Header Files\RefactoringBaseClass\Post.h" />
@@ -154,6 +155,7 @@
     <ClCompile Include="Resource Files\Inheritance\Student.cpp" />
     <ClCompile Include="Resource Files\Inheritance\Teacher.cpp" />
     <ClCompile Include="Resource Files\Main.cpp" />
+    <ClCompile Include="Resource Files\Polymorphism\Product.cpp" />
     <ClCompile Include="Resource Files\RefactoringBaseClass\Login.cpp" />
     <ClCompile Include="Resource Files\RefactoringBaseClass\PaidUser.cpp" />
     <ClCompile Include="Resource Files\RefactoringBaseClass\Post.cpp" />
