--- a/LAB5/LAB5.vcxproj
+++ b/LAB5/LAB5.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Header Files\Inheritance\Person.h" />
     <ClInclude Include="Header Files\Inheritance\Student.h" />
     <ClInclude Include="Header Files\Inheritance\Teacher.h" />
+    <ClInclude Include="Header Files\Polymorphism\DiscountBase.h" />
     <ClInclude Include="Header Files\Polymorphism\Product.h" />
     <ClInclude Include="Header Files\RefactoringBaseClass\Login.h" />
     <ClInclude Include="Header Files\RefactoringBaseClass\PaidUser.h" />
