Сохранил файлы лабораторной работы 4 с кодировкой UTF-8

--- a/LAB5/LAB5.vcxproj
+++ b/LAB5/LAB5.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Header Files\Inheritance\Person.h" />
     <ClInclude Include="Header Files\Inheritance\Student.h" />
     <ClInclude Include="Header Files\Inheritance\Teacher.h" />
+    <ClInclude Include="Header Files\Polymorphism\5.3.h" />
     <ClInclude Include="Header Files\Polymorphism\CertificateDiscount.h" />
     <ClInclude Include="Header Files\Polymorphism\DiscountBase.h" />
     <ClInclude Include="Header Files\Polymorphism\PercentDiscount.h" />
