--- a/LAB5/LAB5.vcxproj.filters
+++ b/LAB5/LAB5.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Header Files\Polymorphism\CertificateDiscount.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Header Files\Polymorphism\5.3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Resource Files\Inheritance\Person.cpp">
