Исправил некоторые TODO

--- a/LAB3 Classes/LAB3 Classes.vcxproj
+++ b/LAB3 Classes/LAB3 Classes.vcxproj
@@ -141,46 +141,46 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Header Files\Agregation\3.3.h" />
-    <ClInclude Include="Header Files\Agregation\Flight.h" />
-    <ClInclude Include="Header Files\Agregation\Point.h" />
-    <ClInclude Include="Header Files\Agregation\Rectangle.h" />
-    <ClInclude Include="Header Files\Agregation\Time.h" />
+    <ClInclude Include="Header Files\Agregation\Airport\Flight.h" />
+    <ClInclude Include="Header Files\Agregation\Geometry\Point.h" />
+    <ClInclude Include="Header Files\Agregation\Geometry\Rectangle.h" />
+    <ClInclude Include="Header Files\Agregation\Airport\Time.h" />
     <ClInclude Include="Header Files\Classes\3.5.h" />
-    <ClInclude Include="Header Files\Classes\AlbumClass.h" />
-    <ClInclude Include="Header Files\Classes\BandClass.h" />
-    <ClInclude Include="Header Files\Classes\FlightClass.h" />
-    <ClInclude Include="Header Files\Classes\GenreEnum.h" />
-    <ClInclude Include="Header Files\Classes\PointClass.h" />
-    <ClInclude Include="Header Files\Classes\RectangleClass.h" />
-    <ClInclude Include="Header Files\Classes\SongClass.h" />
-    <ClInclude Include="Header Files\Classes\TimeClass.h" />
+    <ClInclude Include="Header Files\Classes\MusicClasses\AlbumClass.h" />
+    <ClInclude Include="Header Files\Classes\MusicClasses\BandClass.h" />
+    <ClInclude Include="Header Files\Classes\AirportClasses\FlightClass.h" />
+    <ClInclude Include="Header Files\Classes\MusicClasses\GenreEnum.h" />
+    <ClInclude Include="Header Files\Classes\GeometryClasses\PointClass.h" />
+    <ClInclude Include="Header Files\Classes\GeometryClasses\RectangleClass.h" />
+    <ClInclude Include="Header Files\Classes\MusicClasses\SongClass.h" />
+    <ClInclude Include="Header Files\Classes\AirportClasses\TimeClass.h" />
     <ClInclude Include="Header Files\OneToManyAggregation\3.4.h" />
-    <ClInclude Include="Header Files\OneToManyAggregation\Album.h" />
-    <ClInclude Include="Header Files\OneToManyAggregation\Band.h" />
-    <ClInclude Include="Header Files\OneToManyAggregation\Song.h" />
+    <ClInclude Include="Header Files\OneToManyAggregation\Music\Album.h" />
+    <ClInclude Include="Header Files\OneToManyAggregation\Music\Band.h" />
+    <ClInclude Include="Header Files\OneToManyAggregation\Music\Song.h" />
     <ClInclude Include="Header Files\StructureArrayFields\3.2.h" />
     <ClInclude Include="Header Files\StructureArrayFields\Book.h" />
     <ClInclude Include="Header Files\StructureArrayFields\Route.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Resource Files\Aggregation\3.3.cpp" />
-    <ClCompile Include="Resource Files\Aggregation\Flight.cpp" />
-    <ClCompile Include="Resource Files\Aggregation\Point.cpp" />
-    <ClCompile Include="Resource Files\Aggregation\Rectangle.cpp" />
-    <ClCompile Include="Resource Files\Aggregation\Time.cpp" />
+    <ClCompile Include="Resource Files\Aggregation\Airport\Flight.cpp" />
+    <ClCompile Include="Resource Files\Aggregation\Geometry\Point.cpp" />
+    <ClCompile Include="Resource Files\Aggregation\Geometry\Rectangle.cpp" />
+    <ClCompile Include="Resource Files\Aggregation\Airport\Time.cpp" />
     <ClCompile Include="Resource Files\Classes\3.5.cpp" />
-    <ClCompile Include="Resource Files\Classes\AlbumClass.cpp" />
-    <ClCompile Include="Resource Files\Classes\BandClass.cpp" />
-    <ClCompile Include="Resource Files\Classes\FlightClass.cpp" />
-    <ClCompile Include="Resource Files\Classes\PointClass.cpp" />
-    <ClCompile Include="Resource Files\Classes\RectangleClass.cpp" />
-    <ClCompile Include="Resource Files\Classes\SongClass.cpp" />
-    <ClCompile Include="Resource Files\Classes\TimeClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\MusicClasses\AlbumClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\MusicClasses\BandClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\AirportClasses\FlightClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\GeometryClasses\PointClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\GeometryClasses\RectangleClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\MusicClasses\SongClass.cpp" />
+    <ClCompile Include="Resource Files\Classes\AirportClasses\TimeClass.cpp" />
     <ClCompile Include="Resource Files\Main.cpp" />
     <ClCompile Include="Resource Files\OneToManyAggregation\3.4.cpp" />
-    <ClCompile Include="Resource Files\OneToManyAggregation\Album.cpp" />
-    <ClCompile Include="Resource Files\OneToManyAggregation\Band.cpp" />
-    <ClCompile Include="Resource Files\OneToManyAggregation\Song.cpp" />
+    <ClCompile Include="Resource Files\OneToManyAggregation\Music\Album.cpp" />
+    <ClCompile Include="Resource Files\OneToManyAggregation\Music\Band.cpp" />
+    <ClCompile Include="Resource Files\OneToManyAggregation\Music\Song.cpp" />
     <ClCompile Include="Resource Files\StructuresArrayFields\3.2.cpp" />
     <ClCompile Include="Resource Files\StructuresArrayFields\Book.cpp" />
     <ClCompile Include="Resource Files\StructuresArrayFields\Route.cpp" />
